@@ -16,6 +16,8 @@ version 0.7.7 - Currently available as subversion snapshot.
   -NEW: add ancestralGen to penetrance and qtrait operators
   -NEW: add hasInfoField() function
   -BUG: fix a affected sibpair sampler bug introduced in 0.7.5
+  -CHG: individual comparison does not compare information fields
+  -CHG: adjust individual representation (actually output genotype)
   
 
 version 0.7.6 - (Rev 674) Dec 25, 2006
